--- a/_posts/2021-11-18-test1.md
+++ b/_posts/2021-11-18-test1.md
@@ -1,6 +1,9 @@
 ---
-layout: mypost  title: 测试 categories: [测试,git]
+layout: mypost  
+title: 测试 
+categories: [jekyll]
 ---
+
 -这是一个测试-
 
 测试一下，git和markdown还有vim哈哈哈
