修改图片链接

--- a/_posts/2021-05-15-从无到有｜零基础个人博客搭建.md
+++ b/_posts/2021-05-15-从无到有｜零基础个人博客搭建.md
@@ -1,8 +1,8 @@
 ---
-layout: mypost
+layout: post
 title: 从无到有丨零基础个人博客搭建
 date: 2021-05-15
-categories: ["wordpress","前端","博客","域名","技术","搭建","服务器"]
+categories: [wordpress]
 ---
 
 <!-- wp:paragraph -->
@@ -111,7 +111,7 @@ categories: ["wordpress","前端","博客","域名","技术","搭建","服务器
 <!-- /wp:paragraph -->
 
 <!-- wp:image {"id":27,"sizeSlug":"large"} -->
-<figure class="wp-block-image size-large">![](2021/05/超级截屏_20201018_141807_compress68-701x1024.jpg)</figure>
+<figure class="wp-block-image size-large">![](posts/2021/05/超级截屏_20201018_141807_compress68-701x1024.jpg)</figure>
 <!-- /wp:image -->
 
 <!-- wp:paragraph -->
@@ -121,7 +121,7 @@ categories: ["wordpress","前端","博客","域名","技术","搭建","服务器
 <!-- /wp:paragraph -->
 
 <!-- wp:image {"id":28,"sizeSlug":"large"} -->
-<figure class="wp-block-image size-large">![](2021/05/超级截屏_20201018_141736_compress21-1024x913.jpg)</figure>
+<figure class="wp-block-image size-large">![](posts/2021/05/超级截屏_20201018_141736_compress21-1024x913.jpg)</figure>
 <!-- /wp:image -->
 
 <!-- wp:paragraph -->
@@ -137,7 +137,7 @@ categories: ["wordpress","前端","博客","域名","技术","搭建","服务器
 <!-- /wp:paragraph -->
 
 <!-- wp:image {"id":27,"sizeSlug":"large"} -->
-<figure class="wp-block-image size-large">![](2021/05/超级截屏_20201018_141807_compress68-701x1024.jpg)</figure>
+<figure class="wp-block-image size-large">![](posts/2021/05/超级截屏_20201018_141807_compress68-701x1024.jpg)</figure>
 <!-- /wp:image -->
 
 <!-- wp:heading {"level":4} -->
@@ -159,7 +159,7 @@ categories: ["wordpress","前端","博客","域名","技术","搭建","服务器
 <!-- /wp:paragraph -->
 
 <!-- wp:image {"id":30,"sizeSlug":"large"} -->
-<figure class="wp-block-image size-large">![](2021/05/超级截屏_20201031_231215_compress22-1024x989.jpg)</figure>
+<figure class="wp-block-image size-large">![](posts/2021/05/超级截屏_20201031_231215_compress22-1024x989.jpg)</figure>
 <!-- /wp:image -->
 
 <!-- wp:paragraph -->
@@ -176,7 +176,7 @@ categories: ["wordpress","前端","博客","域名","技术","搭建","服务器
 
 <!-- wp:paragraph {"align":"center"} -->
 
-![](2021/05/超级截屏_20201031_233236_compress14.jpg)
+![](posts/2021/05/超级截屏_20201031_233236_compress14.jpg)
 
 <!-- /wp:paragraph -->
 
@@ -187,7 +187,7 @@ categories: ["wordpress","前端","博客","域名","技术","搭建","服务器
 <!-- /wp:paragraph -->
 
 <!-- wp:image {"id":90,"sizeSlug":"large","linkDestination":"attachment"} -->
-<figure class="wp-block-image size-large">[![](2021/05/Screenshot_20210515182326_compress21-671x1024.jpg)](http://wuko.top/?attachment_id=90)<figcaption>img</figcaption></figure>
+<figure class="wp-block-image size-large">[![](posts/2021/05/Screenshot_20210515182326_compress21-671x1024.jpg)](http://wuko.top/?attachment_id=90)<figcaption>img</figcaption></figure>
 <!-- /wp:image -->
 
 <!-- wp:paragraph -->
@@ -197,7 +197,7 @@ categories: ["wordpress","前端","博客","域名","技术","搭建","服务器
 <!-- /wp:paragraph -->
 
 <!-- wp:image {"id":91,"sizeSlug":"large","linkDestination":"attachment"} -->
-<figure class="wp-block-image size-large">[![](2021/05/Screenshot_20210515182400_compress33-576x1024.jpg)](http://wuko.top/?attachment_id=91)</figure>
+<figure class="wp-block-image size-large">[![](posts/2021/05/Screenshot_20210515182400_compress33-576x1024.jpg)](http://wuko.top/?attachment_id=91)</figure>
 <!-- /wp:image -->
 
 <!-- wp:paragraph -->
@@ -207,11 +207,11 @@ categories: ["wordpress","前端","博客","域名","技术","搭建","服务器
 <!-- /wp:paragraph -->
 
 <!-- wp:image {"id":92,"sizeSlug":"large","linkDestination":"attachment"} -->
-<figure class="wp-block-image size-large">[![](2021/05/Screenshot_20210515182413_compress60-1024x839.jpg)](http://wuko.top/?attachment_id=92)</figure>
+<figure class="wp-block-image size-large">[![](posts/2021/05/Screenshot_20210515182413_compress60-1024x839.jpg)](http://wuko.top/?attachment_id=92)</figure>
 <!-- /wp:image -->
 
 <!-- wp:image {"id":93,"sizeSlug":"large","linkDestination":"attachment"} -->
-<figure class="wp-block-image size-large">[![](2021/05/Screenshot_20210515182430_compress19-576x1024.jpg)](http://wuko.top/?attachment_id=93)</figure>
+<figure class="wp-block-image size-large">[![](posts/2021/05/Screenshot_20210515182430_compress19-576x1024.jpg)](http://wuko.top/?attachment_id=93)</figure>
 <!-- /wp:image -->
 
 <!-- wp:paragraph -->
@@ -221,7 +221,7 @@ categories: ["wordpress","前端","博客","域名","技术","搭建","服务器
 <!-- /wp:paragraph -->
 
 <!-- wp:image {"id":94,"sizeSlug":"large","linkDestination":"attachment"} -->
-<figure class="wp-block-image size-large">[![](2021/05/Screenshot_20210515182443_compress3-680x1024.jpg)](http://wuko.top/?attachment_id=94)</figure>
+<figure class="wp-block-image size-large">[![](posts/2021/05/Screenshot_20210515182443_compress3-680x1024.jpg)](http://wuko.top/?attachment_id=94)</figure>
 <!-- /wp:image -->
 
 <!-- wp:paragraph -->
@@ -243,7 +243,7 @@ categories: ["wordpress","前端","博客","域名","技术","搭建","服务器
 <!-- /wp:paragraph -->
 
 <!-- wp:image {"id":95,"sizeSlug":"large","linkDestination":"attachment"} -->
-<figure class="wp-block-image size-large">[![](2021/05/Screenshot_20210515182510_compress25-576x1024.jpg)](http://wuko.top/?attachment_id=95)</figure>
+<figure class="wp-block-image size-large">[![](posts/2021/05/Screenshot_20210515182510_compress25-576x1024.jpg)](http://wuko.top/?attachment_id=95)</figure>
 <!-- /wp:image -->
 
 <!-- wp:image {"id":97} -->
