--- a/_posts/2021-05-15-从无到有｜零基础个人博客搭建.md
+++ b/_posts/2021-05-15-从无到有｜零基础个人博客搭建.md
@@ -111,7 +111,8 @@ categories: [wordpress]
 <!-- /wp:paragraph -->
 
 <!-- wp:image {"id":27,"sizeSlug":"large"} -->
-<figure class="wp-block-image size-large">![](posts/2021/05/超级截屏_20201018_141807_compress68-701x1024.jpg)</figure>
+![27](posts/2021/05/超级截屏_20201018_141807_compress68-701x1024.jpg)
+
 <!-- /wp:image -->
 
 <!-- wp:paragraph -->
@@ -120,8 +121,7 @@ categories: [wordpress]
 
 <!-- /wp:paragraph -->
 
-<!-- wp:image {"id":28,"sizeSlug":"large"} -->
-<figure class="wp-block-image size-large">![](posts/2021/05/超级截屏_20201018_141736_compress21-1024x913.jpg)</figure>
+![28](posts/2021/05/超级截屏_20201018_141736_compress21-1024x913.jpg)
 <!-- /wp:image -->
 
 <!-- wp:paragraph -->
@@ -136,8 +136,7 @@ categories: [wordpress]
 
 <!-- /wp:paragraph -->
 
-<!-- wp:image {"id":27,"sizeSlug":"large"} -->
-<figure class="wp-block-image size-large">![](posts/2021/05/超级截屏_20201018_141807_compress68-701x1024.jpg)</figure>
+![29](posts/2021/05/超级截屏_20201018_141807_compress68-701x1024.jpg)
 <!-- /wp:image -->
 
 <!-- wp:heading {"level":4} -->
@@ -158,8 +157,7 @@ categories: [wordpress]
 
 <!-- /wp:paragraph -->
 
-<!-- wp:image {"id":30,"sizeSlug":"large"} -->
-<figure class="wp-block-image size-large">![](posts/2021/05/超级截屏_20201031_231215_compress22-1024x989.jpg)</figure>
+![30](posts/2021/05/超级截屏_20201031_231215_compress22-1024x989.jpg)
 <!-- /wp:image -->
 
 <!-- wp:paragraph -->
@@ -176,7 +174,7 @@ categories: [wordpress]
 
 <!-- wp:paragraph {"align":"center"} -->
 
-![](posts/2021/05/超级截屏_20201031_233236_compress14.jpg)
+![31](posts/2021/05/超级截屏_20201031_233236_compress14.jpg)
 
 <!-- /wp:paragraph -->
 
@@ -186,9 +184,7 @@ categories: [wordpress]
 
 <!-- /wp:paragraph -->
 
-<!-- wp:image {"id":90,"sizeSlug":"large","linkDestination":"attachment"} -->
-<figure class="wp-block-image size-large">[![](posts/2021/05/Screenshot_20210515182326_compress21-671x1024.jpg)](http://wuko.top/?attachment_id=90)<figcaption>img</figcaption></figure>
-<!-- /wp:image -->
+![32](posts/2021/05/Screenshot_20210515182326_compress21-671x1024.jpg)
 
 <!-- wp:paragraph -->
 
@@ -196,9 +192,8 @@ categories: [wordpress]
 
 <!-- /wp:paragraph -->
 
-<!-- wp:image {"id":91,"sizeSlug":"large","linkDestination":"attachment"} -->
-<figure class="wp-block-image size-large">[![](posts/2021/05/Screenshot_20210515182400_compress33-576x1024.jpg)](http://wuko.top/?attachment_id=91)</figure>
-<!-- /wp:image -->
+
+![33](posts/2021/05/Screenshot_20210515182400_compress33-576x1024.jpg)]
 
 <!-- wp:paragraph -->
 
@@ -206,13 +201,9 @@ categories: [wordpress]
 
 <!-- /wp:paragraph -->
 
-<!-- wp:image {"id":92,"sizeSlug":"large","linkDestination":"attachment"} -->
-<figure class="wp-block-image size-large">[![](posts/2021/05/Screenshot_20210515182413_compress60-1024x839.jpg)](http://wuko.top/?attachment_id=92)</figure>
-<!-- /wp:image -->
+![34](posts/2021/05/Screenshot_20210515182413_compress60-1024x839.jpg)
 
-<!-- wp:image {"id":93,"sizeSlug":"large","linkDestination":"attachment"} -->
-<figure class="wp-block-image size-large">[![](posts/2021/05/Screenshot_20210515182430_compress19-576x1024.jpg)](http://wuko.top/?attachment_id=93)</figure>
-<!-- /wp:image -->
+![35](posts/2021/05/Screenshot_20210515182430_compress19-576x1024.jpg)
 
 <!-- wp:paragraph -->
 
@@ -220,9 +211,7 @@ categories: [wordpress]
 
 <!-- /wp:paragraph -->
 
-<!-- wp:image {"id":94,"sizeSlug":"large","linkDestination":"attachment"} -->
-<figure class="wp-block-image size-large">[![](posts/2021/05/Screenshot_20210515182443_compress3-680x1024.jpg)](http://wuko.top/?attachment_id=94)</figure>
-<!-- /wp:image -->
+![36](posts/2021/05/Screenshot_20210515182443_compress3-680x1024.jpg)
 
 <!-- wp:paragraph -->
 
@@ -242,12 +231,9 @@ categories: [wordpress]
 
 <!-- /wp:paragraph -->
 
-<!-- wp:image {"id":95,"sizeSlug":"large","linkDestination":"attachment"} -->
-<figure class="wp-block-image size-large">[![](posts/2021/05/Screenshot_20210515182510_compress25-576x1024.jpg)](http://wuko.top/?attachment_id=95)</figure>
-<!-- /wp:image -->
+![37](posts/2021/05/Screenshot_20210515182510_compress25-576x1024.jpg)
 
-<!-- wp:image {"id":97} -->
-<figure class="wp-block-image">![](Screenshot_20210515193806-1024x546.jpg)<figcaption>**Hello World!**</figcaption></figure>
+![38](Screenshot_20210515193806-1024x546.jpg)<figcaption>**Hello World!**</figcaption>
 <!-- /wp:image -->
 
 <!-- wp:heading {"level":3} -->
