--- a/_posts/2021-05-15-从无到有｜零基础个人博客搭建.md
+++ b/_posts/2021-05-15-从无到有｜零基础个人博客搭建.md
@@ -111,7 +111,7 @@ categories: [wordpress]
 <!-- /wp:paragraph -->
 
 <!-- wp:image {"id":27,"sizeSlug":"large"} -->
-![27](posts/2021/05/超级截屏_20201018_141807_compress68-701x1024.jpg)
+![27](超级截屏_20201018_141807_compress68-701x1024.jpg)
 
 <!-- /wp:image -->
 
@@ -121,7 +121,7 @@ categories: [wordpress]
 
 <!-- /wp:paragraph -->
 
-![28](posts/2021/05/超级截屏_20201018_141736_compress21-1024x913.jpg)
+![28](超级截屏_20201018_141736_compress21-1024x913.jpg)
 <!-- /wp:image -->
 
 <!-- wp:paragraph -->
@@ -136,7 +136,7 @@ categories: [wordpress]
 
 <!-- /wp:paragraph -->
 
-![29](posts/2021/05/超级截屏_20201018_141807_compress68-701x1024.jpg)
+![29](超级截屏_20201018_141807_compress68-701x1024.jpg)
 <!-- /wp:image -->
 
 <!-- wp:heading {"level":4} -->
@@ -157,7 +157,7 @@ categories: [wordpress]
 
 <!-- /wp:paragraph -->
 
-![30](posts/2021/05/超级截屏_20201031_231215_compress22-1024x989.jpg)
+![30](超级截屏_20201031_231215_compress22-1024x989.jpg)
 <!-- /wp:image -->
 
 <!-- wp:paragraph -->
@@ -174,7 +174,7 @@ categories: [wordpress]
 
 <!-- wp:paragraph {"align":"center"} -->
 
-![31](posts/2021/05/超级截屏_20201031_233236_compress14.jpg)
+![31](超级截屏_20201031_233236_compress14.jpg)
 
 <!-- /wp:paragraph -->
 
@@ -184,7 +184,7 @@ categories: [wordpress]
 
 <!-- /wp:paragraph -->
 
-![32](posts/2021/05/Screenshot_20210515182326_compress21-671x1024.jpg)
+![32](Screenshot_20210515182326_compress21-671x1024.jpg)
 
 <!-- wp:paragraph -->
 
@@ -193,7 +193,7 @@ categories: [wordpress]
 <!-- /wp:paragraph -->
 
 
-![33](posts/2021/05/Screenshot_20210515182400_compress33-576x1024.jpg)]
+![33](Screenshot_20210515182400_compress33-576x1024.jpg)]
 
 <!-- wp:paragraph -->
 
@@ -201,9 +201,9 @@ categories: [wordpress]
 
 <!-- /wp:paragraph -->
 
-![34](posts/2021/05/Screenshot_20210515182413_compress60-1024x839.jpg)
+![34](Screenshot_20210515182413_compress60-1024x839.jpg)
 
-![35](posts/2021/05/Screenshot_20210515182430_compress19-576x1024.jpg)
+![35](Screenshot_20210515182430_compress19-576x1024.jpg)
 
 <!-- wp:paragraph -->
 
@@ -211,7 +211,7 @@ categories: [wordpress]
 
 <!-- /wp:paragraph -->
 
-![36](posts/2021/05/Screenshot_20210515182443_compress3-680x1024.jpg)
+![36](Screenshot_20210515182443_compress3-680x1024.jpg)
 
 <!-- wp:paragraph -->
 
@@ -231,7 +231,7 @@ categories: [wordpress]
 
 <!-- /wp:paragraph -->
 
-![37](posts/2021/05/Screenshot_20210515182510_compress25-576x1024.jpg)
+![37](Screenshot_20210515182510_compress25-576x1024.jpg)
 
 ![38](Screenshot_20210515193806-1024x546.jpg)<figcaption>**Hello World!**</figcaption>
 <!-- /wp:image -->
