--- a/_posts/2021-05-15-从无到有｜零基础个人博客搭建.md
+++ b/_posts/2021-05-15-从无到有｜零基础个人博客搭建.md
@@ -22,7 +22,9 @@ categories: [wordpress]
 
 本篇文章会以纯小白的视角来从零开始介绍，还可以搭配网络上的教程视频配合食用。[heimu]虽然安装wordpress为全傻瓜操作，但我还是决定写这篇教程，绝对不是因为建站快一年一篇正式文章也没有写而来凑数的！([/heimu]
 
-[music autoplay="0"]833263[/music]
+<iframe src="//music.163.com/outchain/player?type=2&id=833263&auto=0&height=66" frameborder="0" width="100%" height="86px">
+</iframe>
+
 
 <!-- wp:heading {"level":3} -->
 
