新文章发布

--- a/_posts/2022-01-02-gitnotes.md
+++ b/_posts/2022-01-02-gitnotes.md
@@ -31,6 +31,14 @@ _复制密钥_
 
 粘贴保存即可。
 
+`ssh -T git@github.com` 
+
+_检测ssh状态_
+
+**如果先前本地库默认为ssh提交，请跳过此步**
+
+修改本地库`.git/config`中`[remote"origin"]`的`url`参数为git格式*。(具体请见**一-3-克隆库**)
+
 # 一，开始
 
 ## 1，安装git
@@ -56,6 +64,12 @@ _复制密钥_
 ### 克隆库
 
 `git clone [地址]` _克隆远程仓库_
+
+_注:若使用SSH提交，地址请选择git而非https，如:_
+
+_`git@github.com:wuko233/test.git`   ✓_
+
+_`https://github.com/wuko233/test`  ×_
 
 # 二，提交&修改
 
@@ -106,3 +120,4 @@ _复制密钥_
 
 
 **以上。还有一些我没用过的命令，等用的时候再补充吧。**
+
