--- a/404.md
+++ b/404.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 页面未找到
+title: 页面未找到，即将跳转至主页
 ---
 
 ```js
@@ -12,3 +12,20 @@ if (!found) {
 <script src="
 https://volunteer.cdn-go.cn/404/latest/404.js
 "></script>
+
+    <div></div>
+    <script>
+        var div = document.querySelector('div');
+        var timer = 5;
+        fn();
+        setInterval(fn, 1000);
+
+        function fn() {
+            if (timer == 0) {
+                location.href = 'https://wuko.top/';
+            } else {
+                div.innerHTML = timer + '秒钟之后跳转到首页';
+                timer--;
+            }
+        }
+    </script>
