--- a/404.md
+++ b/404.md
@@ -3,19 +3,22 @@ layout: page
 title: 页面未找到，即将跳转至主页
 ---
 
-<script>
-        var div = document.querySelector('div');
-        var timer = 2;
-        fn();
-        setInterval(fn, 1000);
+<span id="jumpTo">5</span>秒后自动跳转至主页
+<script type="text/javascript">
+    funJump(5,'https://wuko.top/');
+    function funJump(secs,surl){
+        var jumpTo=document.getElementById('jumpTo');
+        jumpTo.innerHTML=secs;
+        if(--secs>0){
+            setTimeout(function(){ funJump(secs,surl)},1000);
+            // setTimeout("funJump("+secs+",'"+surl+"')",1000);   
 
-        function fn() {
-            if (timer == 0) {
-                location.href = 'https://wuko.top/';
-            } 
+        }else{
+            location.href=surl;
         }
-    </script>
 
+    }
+</script> 
 <script src="
 https://volunteer.cdn-go.cn/404/latest/404.js
 "></script>
