--- a/404.md
+++ b/404.md
@@ -9,3 +9,5 @@ if (!found) {
   throw ("(╯°□°)╯︵ ┻━┻");
 }
 ```
+
+<script src="//cdn.dnpw.org/404/v1.min.js" maincolor="#F00" jumptime="2" jumptarget="/" tips="404" error="" charset="utf-8"></script>
