--- a/404.md
+++ b/404.md
@@ -1,7 +1,9 @@
 ---
 layout: page
-title: 页面未找到
+title: 页面未找到 准备跳转
 ---
+
+#页面未找到
 
 ```js
 // 404 page not found.
@@ -10,4 +12,4 @@ if (!found) {
 }
 ```
 
-<script src="//cdn.dnpw.org/404/v1.min.js" maincolor="#F00" jumptime="2" jumptarget="/" tips="404" error="" charset="utf-8"></script>
+<script src="//cdn.dnpw.org/404/v1.min.js" maincolor="#F00" jumptime="4" jumptarget="/" tips="404" error="" charset="utf-8"></script>
