--- a/_posts/2022-07-23-buildblog2.md
+++ b/_posts/2022-07-23-buildblog2.md
@@ -17,9 +17,7 @@ categories: [web]
 ## 二，连接服务器
 
 一开始我打算使用我的PC连接，但因为win7并不自带ssh，遂手动安装，后也是成功连接到了服务器：
-
-[![jOSr8J.png](https://s1.ax1x.com/2022/07/22/jOSr8J.png)](https://imgtu.com/i/jOSr8J)
-
+[![jX96dP.png](https://s1.ax1x.com/2022/07/23/jX96dP.png)](https://imgtu.com/i/jX96dP)
 但ssh在我的win7系统中频繁崩溃，便打算在手机上用Termux连接到服务器，但...这不是又得戳屏幕吗？
 
 就在我百思不得其解时，我发现在阿里云的控制面板中有一个名为**Workbench远程连接**的功能。在输入密码后，终于是可以开搞了。
