--- a/_posts/2022-9-30-1000Days.md
+++ b/_posts/2022-9-30-1000Days.md
@@ -7,10 +7,7 @@ categories: [other]
 
 2020-01-03，使用cccyun的免费虚拟主机与emlog博客系统做出了我的第一个公开的博客界面，距今已有1000天。
 
-当时使用的是免费的二级域名解析，包括:
-http://spiriticemnil.dowy.cn/、
-http://lingbingmwu.aote.xyz/、
-等，后于2020-07-05 正式更改为顶级域名wuko.top(当时薅到羊毛只花了1CNY买了一年，现在续费要近30CNY)。
+当时使用的是免费的二级域名解析[现在都被解析到了黄网23.10]，后于2020-07-05 正式更改为顶级域名wuko.top(当时薅到羊毛只花了1CNY买了一年，现在续费要近30CNY)。
 
 大概在建站2、3个月后换了wordpress，然后一直用到了cccyun停止免费服务。
 
