--- a/_posts/2024-06-09-第一次装PC—聊聊我的电脑历程.md
+++ b/_posts/2024-06-09-第一次装PC—聊聊我的电脑历程.md
@@ -14,7 +14,8 @@ categories: [硬件]
 ## 关于旧电脑
 
 先看配置：
-| 配件 |                               |
+
+| 配件 | 23333                         |
 | ---- | ----------------------------- |
 | CPU  | AMD 速龙II X2 240 2.8GHz 2C2G |
 | 主板 | 映泰MCP6P M2                  |
@@ -36,11 +37,11 @@ categories: [硬件]
 
 ...
 
-![老主板](https://i0.hdslb.com/bfs/new_dyn/f3d07783259cf4a215b008b57448c507309496281.jpg@800x800)
+![老主板](/posts/2024/001.jpg@800x800)
 
-[大图](https://i0.hdslb.com/bfs/new_dyn/f3d07783259cf4a215b008b57448c507309496281.jpg)
+[大图](/posts/2024/001.jpg)
 
-![老CPu](https://i0.hdslb.com/bfs/new_dyn/939e5e210a9060e2aee97f3f1c7b0761309496281.jpg@400x00)
+![老CPu](/posts/2024/002.jpg@400x400)
 
 感谢多年陪伴，这麽多年下来这套配置依然能够流畅win10ltsc与办公，但是因为集显驱动没有win10支持，以及主板PCIe x16槽接触不良无法稳定加装显卡，于是便有了装新机的念头。
 
@@ -67,13 +68,13 @@ categories: [硬件]
 
 ## 到货装机
 
-主板 [大图](https://i0.hdslb.com/bfs/new_dyn/1d0be5cfdbb6ac3dcb6294945244ec49309496281.jpg@88w_88h_1c_1s_!web-comment-note.avif)
+主板 [大图](/posts/2024/003.jpg)
 
-![主板](https://i0.hdslb.com/bfs/new_dyn/1d0be5cfdbb6ac3dcb6294945244ec49309496281.jpg@400x400)
+![主板](/posts/2024/003.jpg@400x400)
 
-所有 [大图](https://i0.hdslb.com/bfs/new_dyn/b5bfa3d7674d8cf347b3b427fa901f29309496281.jpg)
+所有 [大图](/posts/2024/004.jpg)
 
-![所有](https://i0.hdslb.com/bfs/new_dyn/b5bfa3d7674d8cf347b3b427fa901f29309496281.jpg@400x400)
+![所有](/posts/2024/004.jpg@400x400)
 
 ### 开始装机
 
@@ -89,12 +90,12 @@ Youtube
 
 成功点亮！
 
-![](https://i0.hdslb.com/bfs/new_dyn/b37677182dc5a0f1a9bdf8c97bd4b3f1309496281.jpg@!web-comment-note.avif)
+![](/posts/2024/005.jpg)
 
 彩色中文BIOS界面！居然还能用鼠标，科技感满满！再也不是原来的蓝天白云了。
 
 测试没问题就装到了机箱：
-![](https://i0.hdslb.com/bfs/new_dyn/42acb2ddb3ab9e9f7b1449c7cd8c97e9309496281.jpg@500x1900)
+![](/posts/2024/006.jpg@500x1900)
 
   真难装。。。比前面还难装，主板和机箱孔位死活对不齐，最后大力出奇迹解决了。理线？盖板一盖，谁也不爱！
 
