--- a/_posts/2024-06-09-第一次装PC—聊聊我的电脑历程.md
+++ b/_posts/2024-06-09-第一次装PC—聊聊我的电脑历程.md
@@ -37,11 +37,11 @@ categories: [硬件]
 
 ...
 
-![老主板](/posts/2024/001.jpg@800x800)
+![老主板](/posts/2024/001.jpg)
 
 [大图](/posts/2024/001.jpg)
 
-![老CPu](/posts/2024/002.jpg@400x400)
+![老CPu](/posts/2024/002.jpg)
 
 感谢多年陪伴，这麽多年下来这套配置依然能够流畅win10ltsc与办公，但是因为集显驱动没有win10支持，以及主板PCIe x16槽接触不良无法稳定加装显卡，于是便有了装新机的念头。
 
@@ -70,11 +70,11 @@ categories: [硬件]
 
 主板 [大图](/posts/2024/003.jpg)
 
-![主板](/posts/2024/003.jpg@400x400)
+![主板](/posts/2024/003.jpg)
 
 所有 [大图](/posts/2024/004.jpg)
 
-![所有](/posts/2024/004.jpg@400x400)
+![所有](/posts/2024/004.jpg)
 
 ### 开始装机
 
@@ -95,7 +95,7 @@ Youtube
 彩色中文BIOS界面！居然还能用鼠标，科技感满满！再也不是原来的蓝天白云了。
 
 测试没问题就装到了机箱：
-![](/posts/2024/006.jpg@500x1900)
+![](/posts/2024/006.jpg)
 
   真难装。。。比前面还难装，主板和机箱孔位死活对不齐，最后大力出奇迹解决了。理线？盖板一盖，谁也不爱！
 
